# pyOCCT

./: .gitignore  .gitmodules  .travis.yml  AUTHORS.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  ISSUES.md  ISSUES_TEMPLATE.md  LICENSE.md  NOTES.md  README.md  appveyor.yml  azure-pipelines.yml  build_env.yml  conda-build.yml  environment.yml  generate_env.yml  requirements.txt  setup.py  travis.yml
.github/: ISSUE_TEMPLATE.md
.github/workflows/: ci.yml
OCCT/: AIS.pyd  APIHeaderSection.pyd  Adaptor2d.pyd  Adaptor3d.pyd  AdvApp2Var.pyd  AdvApprox.pyd  AppBlend.pyd  AppCont.pyd  AppDef.pyd  AppParCurves.pyd  AppStd.pyd  AppStdL.pyd  Approx.pyd  ApproxInt.pyd  Aspect.pyd  BLSURFPlugin.pyd  BOPAlgo.pyd  BOPCol.pyd  BOPDS.pyd  BOPTools.pyd  BRep.pyd  BRepAdaptor.pyd  BRepAlgo.pyd  BRepAlgoAPI.pyd  BRepApprox.pyd  BRepBlend.pyd  BRepBndLib.pyd  BRepBuilderAPI.pyd  BRepCheck.pyd  BRepClass.pyd  BRepClass3d.pyd  BRepExtrema.pyd  BRepFeat.pyd  BRepFill.pyd  BRepFilletAPI.pyd  BRepGProp.pyd  BRepIntCurveSurface.pyd  BRepLProp.pyd  BRepLib.pyd  BRepMAT2d.pyd  (+307 more)
OCCT/Boolean/: Algos.py  __init__.py
OCCT/Exchange/: Basic.py  OpenVSP.py  __init__.py
OCCT/Topology/: Bop.py  Check.py  Create.py  Explore.py  Fix.py  Props.py  Utils.py  __init__.py
OCCT/Visualization/: Basic.py  QtViewer.py  WxViewer.py  __init__.py
binder/: LICENSE_cymbal.txt  NOTES.txt  README.md  config.txt  environment.yml  run.py
binder/binder/: __init__.py  common.py  core.py
binder/generate/: config.txt  run.py
ci/conda/: bld.bat  build.sh  conda_build_config.yaml  cross-linux.cmake  meta.yaml  run_test.bat  run_test.sh
cmake/: OCCT_Mods.cmake  OCCT_Modules.cmake  SMESH_Mods.cmake  __init__.py
docs/: Makefile  make.bat
docs/source/: AIS.rst  APIHeaderSection.rst  Adaptor2d.rst  Adaptor3d.rst  AdvApp2Var.rst  AdvApprox.rst  AppBlend.rst  AppCont.rst  AppDef.rst  AppParCurves.rst  AppStd.rst  AppStdL.rst  Approx.rst  ApproxInt.rst  Aspect.rst  BLSURFPlugin.rst  BOPAlgo.rst  BOPCol.rst  BOPDS.rst  BOPTools.rst  BRep.rst  BRepAdaptor.rst  BRepAlgo.rst  BRepAlgoAPI.rst  BRepApprox.rst  BRepBlend.rst  BRepBndLib.rst  BRepBuilderAPI.rst  BRepCheck.rst  BRepClass.rst  BRepClass3d.rst  BRepExtrema.rst  BRepFeat.rst  BRepFill.rst  BRepFilletAPI.rst  BRepGProp.rst  BRepIntCurveSurface.rst  BRepLProp.rst  BRepLib.rst  BRepMAT2d.rst  (+317 more)
examples/: bop_assys.py  bop_speed.py  display.py  exchange.py  fuse_assys.py  graphics.py  import_step.py  import_step_names.py  import_vsp.py  interactive_object.py  mesh.py  mg_mesh.py  smesh_meshgems.py  smesh_netgen.py  smesh_netgen_2d.py  smesh_netgen_3d.py
examples/models/: F-16_OpenVSP3.15.0.stp  F-16_OpenVSP3.5.0.stp  cheese.stp  fuse_assy.brep  fuselage_structure.brep  lhs_wing.brep  planes.stp  shape_names.step  wing_assy.brep  wingbox.brep
inc/: AIS_PyInteractiveObject.hxx  BOPCol_Templates.hpp  BVH_Templates.hpp  BasicsGenericDestructor_Templates.hpp  Graphic3d_Templates.hpp  IntPolyh_Templates.hpp  InterfaceGraphic.hxx  NCollection_Templates.hpp  ObjectPool_Templates.hpp  OpenGl_Templates.hpp  Prs3d_Templates.hpp  SMDS_Templates.hpp  SMESHDS_Templates.hpp  SMESH_Templates.hpp  STL_Templates.hpp  SelectMgr_Templates.hpp  Standard_Templates.hpp  StdObjMgt_Templates.hpp  bind_Define_HArray1.hxx  bind_Define_HArray2.hxx  bind_Define_HSequence.hxx  bind_Font_BRepFont.hxx  bind_NCollection_Shared.hxx  math_Templates.hpp  pyOCCT_Common.hpp  pyOCCT_Common.hxx  xTypes.h
misc/: import_mods.py  make_tests.py
src/: AIS.cpp  AIS_1.cpp  APIHeaderSection.cpp  Adaptor2d.cpp  Adaptor3d.cpp  AdvApp2Var.cpp  AdvApprox.cpp  AppBlend.cpp  AppCont.cpp  AppDef.cpp  AppParCurves.cpp  AppStd.cpp  AppStdL.cpp  Approx.cpp  ApproxInt.cpp  Aspect.cpp  BLSURFPlugin.cpp  BOPAlgo.cpp  BOPCol.cpp  BOPDS.cpp  BOPTools.cpp  BRep.cpp  BRepAdaptor.cpp  BRepAlgo.cpp  BRepAlgoAPI.cpp  BRepApprox.cpp  BRepBlend.cpp  BRepBndLib.cpp  BRepBuilderAPI.cpp  BRepCheck.cpp  BRepClass.cpp  BRepClass3d.cpp  BRepExtrema.cpp  BRepFeat.cpp  BRepFill.cpp  BRepFilletAPI.cpp  BRepGProp.cpp  BRepIntCurveSurface.cpp  BRepLProp.cpp  BRepLib.cpp  (+308 more)
src/include/: bind_BOPTools_BoxSelector.hxx  bind_BOPTools_Cnt.hxx  bind_BOPTools_ContextCnt.hxx  bind_BOPTools_ContextFunctor.hxx  bind_BOPTools_Functor.hxx  bind_BVH_Bin.hxx  bind_BVH_BinnedBuilder.hxx  bind_BVH_Box.hxx  bind_BVH_Builder.hxx  bind_BVH_DistanceField.hxx  bind_BVH_Geometry.hxx  bind_BVH_LinearBuilder.hxx  bind_BVH_Object.hxx  bind_BVH_ObjectSet.hxx  bind_BVH_PrimitiveSet.hxx  bind_BVH_QueueBuilder.hxx  bind_BVH_QuickSorter.hxx  bind_BVH_RadixSorter.hxx  bind_BVH_Set.hxx  bind_BVH_Sorter.hxx  bind_BVH_SpatialMedianBuilder.hxx  bind_BVH_SweepPlaneBuilder.hxx  bind_BVH_Transform.hxx  bind_BVH_Tree.hxx  bind_BVH_TreeBase.hxx  bind_BVH_Triangulation.hxx  bind_Graphic3d_UniformValue.hxx  bind_Graphic3d_UniformValueTypeID.hxx  bind_IntPolyh_Array.hxx  bind_NCollection_Array1.hxx  bind_NCollection_Array2.hxx  bind_NCollection_CellFilter.hxx  bind_NCollection_Comparator.hxx  bind_NCollection_DataMap.hxx  bind_NCollection_DefaultHasher.hxx  bind_NCollection_DoubleMap.hxx  bind_NCollection_EBTree.hxx  bind_NCollection_Handle.hxx  bind_NCollection_IndexedDataMap.hxx  bind_NCollection_IndexedMap.hxx  (+42 more)
src/modules/: AIS.cxx  APIHeaderSection.cxx  Adaptor2d.cxx  Adaptor3d.cxx  AdvApp2Var.cxx  AdvApprox.cxx  AppBlend.cxx  AppCont.cxx  AppDef.cxx  AppParCurves.cxx  AppStd.cxx  AppStdL.cxx  Approx.cxx  ApproxInt.cxx  Aspect.cxx  BOPAlgo.cxx  BOPDS.cxx  BOPTools.cxx  BRep.cxx  BRepAdaptor.cxx  BRepAlgo.cxx  BRepFeat.cxx  (+297 more)
test/: test_AIS.py  test_BRepAlgoAPI.py  test_BRepPrimAPI.py  test_Font.py  test_Geom.py  test_Graphic3d.py  test_InteractiveObject.py  test_MeshVS.py  test_NETGENPlugin.py  test_OpenGl.py  test_Select3d.py  test_ShapeAnalysis.py  test_Standard.py  test_TColgp.py  test_TDocStd.py  test_TopoDS.py  test_V3d.py  test_XCAFDoc.py  test_ais.py  test_graphic3d.py  test_graphic3d_rendering_params.py  test_modules.py  test_ncollection.py  test_occt_modules.py  test_select3d.py  test_smesh_modules.py  test_topods.py
wheelhouse/: OCCT-0.0.1-cp35-none-win_amd64.whl
(+8136 files in other folders)
